--- a/MyProject/MyProject.csproj
+++ b/MyProject/MyProject.csproj
@@ -189,14 +189,54 @@
     <Compile Include="App_Start\RouteConfig.cs" />
     <Compile Include="App_Start\Startup.Auth.cs" />
     <Compile Include="Controllers\AccountController.cs" />
+    <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708032025074_InitialModel.cs" />
+    <Compile Include="Migrations\201708032025074_InitialModel.Designer.cs">
+      <DependentUpon>201708032025074_InitialModel.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032026368_InitialModel1.cs" />
+    <Compile Include="Migrations\201708032026368_InitialModel1.Designer.cs">
+      <DependentUpon>201708032026368_InitialModel1.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032030060_AddIsSubscribedToCustomer.cs" />
+    <Compile Include="Migrations\201708032030060_AddIsSubscribedToCustomer.Designer.cs">
+      <DependentUpon>201708032030060_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032038425_AddMembershipType.cs" />
+    <Compile Include="Migrations\201708032038425_AddMembershipType.Designer.cs">
+      <DependentUpon>201708032038425_AddMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032045365_PopulateMembershipTypes.cs" />
+    <Compile Include="Migrations\201708032045365_PopulateMembershipTypes.Designer.cs">
+      <DependentUpon>201708032045365_PopulateMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032049503_ApplyAnnotationsToCustomerName.cs" />
+    <Compile Include="Migrations\201708032049503_ApplyAnnotationsToCustomerName.Designer.cs">
+      <DependentUpon>201708032049503_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032111440_AddNameToMembershipType.cs" />
+    <Compile Include="Migrations\201708032111440_AddNameToMembershipType.Designer.cs">
+      <DependentUpon>201708032111440_AddNameToMembershipType.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032112241_SetNameOfMembershipTypes.cs" />
+    <Compile Include="Migrations\201708032112241_SetNameOfMembershipTypes.Designer.cs">
+      <DependentUpon>201708032112241_SetNameOfMembershipTypes.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032155345_AddBirthdateToCustomer.cs" />
+    <Compile Include="Migrations\201708032155345_AddBirthdateToCustomer.Designer.cs">
+      <DependentUpon>201708032155345_AddBirthdateToCustomer.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
+    <Compile Include="Models\Customer.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
+    <Compile Include="Models\MembershipType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -257,6 +297,8 @@
     <Content Include="Views\Manage\VerifyPhoneNumber.cshtml" />
     <Content Include="Views\Shared\Lockout.cshtml" />
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
+    <Content Include="Views\Customers\Index.cshtml" />
+    <Content Include="Views\Customers\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -275,6 +317,35 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="Scripts\jquery-1.10.2.min.map" />
+  </ItemGroup>
+  <ItemGroup>
+    <EmbeddedResource Include="Migrations\201708032025074_InitialModel.resx">
+      <DependentUpon>201708032025074_InitialModel.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032026368_InitialModel1.resx">
+      <DependentUpon>201708032026368_InitialModel1.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032030060_AddIsSubscribedToCustomer.resx">
+      <DependentUpon>201708032030060_AddIsSubscribedToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032038425_AddMembershipType.resx">
+      <DependentUpon>201708032038425_AddMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032045365_PopulateMembershipTypes.resx">
+      <DependentUpon>201708032045365_PopulateMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032049503_ApplyAnnotationsToCustomerName.resx">
+      <DependentUpon>201708032049503_ApplyAnnotationsToCustomerName.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032111440_AddNameToMembershipType.resx">
+      <DependentUpon>201708032111440_AddNameToMembershipType.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032112241_SetNameOfMembershipTypes.resx">
+      <DependentUpon>201708032112241_SetNameOfMembershipTypes.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032155345_AddBirthdateToCustomer.resx">
+      <DependentUpon>201708032155345_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
     <VisualStudioVersion Condition="'$(VisualStudioVersion)' == ''">10.0</VisualStudioVersion>
