--- a/MyProject/MyProject.csproj
+++ b/MyProject/MyProject.csproj
@@ -192,6 +192,7 @@
     <Compile Include="Controllers\CustomersController.cs" />
     <Compile Include="Controllers\HomeController.cs" />
     <Compile Include="Controllers\ManageController.cs" />
+    <Compile Include="Controllers\MoviesController.cs" />
     <Compile Include="Global.asax.cs">
       <DependentUpon>Global.asax</DependentUpon>
     </Compile>
@@ -231,12 +232,22 @@
     <Compile Include="Migrations\201708032155345_AddBirthdateToCustomer.Designer.cs">
       <DependentUpon>201708032155345_AddBirthdateToCustomer.cs</DependentUpon>
     </Compile>
+    <Compile Include="Migrations\201708032223582_AddMovie.cs" />
+    <Compile Include="Migrations\201708032223582_AddMovie.Designer.cs">
+      <DependentUpon>201708032223582_AddMovie.cs</DependentUpon>
+    </Compile>
+    <Compile Include="Migrations\201708032227460_Genres.cs" />
+    <Compile Include="Migrations\201708032227460_Genres.Designer.cs">
+      <DependentUpon>201708032227460_Genres.cs</DependentUpon>
+    </Compile>
     <Compile Include="Migrations\Configuration.cs" />
     <Compile Include="Models\AccountViewModels.cs" />
     <Compile Include="Models\Customer.cs" />
+    <Compile Include="Models\Genre.cs" />
     <Compile Include="Models\IdentityModels.cs" />
     <Compile Include="Models\ManageViewModels.cs" />
     <Compile Include="Models\MembershipType.cs" />
+    <Compile Include="Models\Movie.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Startup.cs" />
   </ItemGroup>
@@ -299,6 +310,8 @@
     <Content Include="Views\Shared\_LoginPartial.cshtml" />
     <Content Include="Views\Customers\Index.cshtml" />
     <Content Include="Views\Customers\Details.cshtml" />
+    <Content Include="Views\Movies\Index.cshtml" />
+    <Content Include="Views\Movies\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
@@ -345,6 +358,12 @@
     </EmbeddedResource>
     <EmbeddedResource Include="Migrations\201708032155345_AddBirthdateToCustomer.resx">
       <DependentUpon>201708032155345_AddBirthdateToCustomer.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032223582_AddMovie.resx">
+      <DependentUpon>201708032223582_AddMovie.cs</DependentUpon>
+    </EmbeddedResource>
+    <EmbeddedResource Include="Migrations\201708032227460_Genres.resx">
+      <DependentUpon>201708032227460_Genres.cs</DependentUpon>
     </EmbeddedResource>
   </ItemGroup>
   <PropertyGroup>
